tests/reject/tno_int_in_bool_context.nim
discard """
  line: 6
  errormsg: "Error: type mismatch: got (int) but expected 'bool'"
"""

if 1: 
  echo "wtf?"
  
